responsiveness in tablet

--- a/style.css
+++ b/style.css
@@ -134,8 +134,7 @@ section h4
     position: relative;
     top:30px;
 }
-
-@media(min-width:1300px) 
+@media(min-width:1500px) 
 {
     h1 
     {
@@ -172,10 +171,62 @@ section h4
         line-height: 40px;
     }
 }
-@media(min-width: 1200px) and (max-width:1500px)
+@media(min-width: 1200px) and (max-width:1499px)
 {
     .cards p 
     {
+        font-size: 1.3rem;
+        line-height: 30px;
+    }
+    section h4, section h5 
+    {
+        font-size: 1.1rem;
+    }
+    .title p 
+    {
+        font-size: 1.3rem;
+        line-height: 25px;
+    }
+    .ratings > div 
+    {
+        height:50px;
+        font-size: 1.3rem;
+    }
+}
+/*tablets*/
+@media(min-width:600px) and (max-width:1000px)
+{
+    .title p 
+    {
+        font-size: 1.5rem;
+        line-height: 30px;
+    }
+    .ratings > div 
+    {
+        height:50px;
+        width:85%;
+    }
+    .ratings 
+    {
+        position: relative;
+        right:40px;
+        font-size: 1.2rem;
+    }
+    .cards p 
+    {
+        font-size: 1.2rem;
+        line-height: 30px;
+        text-align: center;
+        position: relative;
+        bottom:25px;
+    }
+    .cards h4, .cards h5 
+    {
         font-size: 1rem;
+    }
+    .cards img 
+    {
+        width:60px;
+        height:60px;
     }
 }
