--- a/style.css
+++ b/style.css
@@ -232,37 +232,23 @@ section h4
 }
 @media(min-width:600px) and (max-width:699px)
 {
+    .title h1 
+    {
+        font-size: 2rem;
+    }
     .title p 
     {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         line-height: 30px;
-    }
-    .ratings > div 
-    {
-        height:50px;
-        width:85%;
     }
     .ratings 
     {
         position: relative;
-        right:40px;
-        font-size: 1.2rem;
+        right:50px;
     }
-    .cards p 
+    .ratings > div 
     {
-        font-size: 1.2rem;
-        line-height: 30px;
-        text-align: center;
-        position: relative;
-        bottom:25px;
-    }
-    .cards h4, .cards h5 
-    {
-        font-size: 1rem;
-    }
-    .cards img 
-    {
-        width:60px;
-        height:60px;
+        
+        width:90%;
     }
 }
