--- a/style.css
+++ b/style.css
@@ -252,3 +252,71 @@ section h4
         width:90%;
     }
 }
+@media(max-width:600px)
+{
+
+ body 
+ {
+    
+    display:flex;
+    flex-direction: column;
+ }
+ h1 
+ {
+    text-align: center;
+    font-size: 3rem;
+ }
+ .title 
+ {
+    padding: 0;
+ }
+ .title p 
+ {
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 30px;
+ }
+ .cards 
+ {
+   
+    flex-direction: column;
+ }
+ .ratings 
+ {
+    padding-bottom: 1em;
+ }
+ .ratings > div 
+ {
+    position: static;
+    flex-direction: column;
+    gap:10px;
+    height:50px;
+    width:80%;
+    font-size: 1.2rem;
+    padding-top: 10px;
+ }
+ .cards > div 
+ {
+    height: 250px;
+ }
+ .cards img 
+ {
+    width:60px;
+    height:60px;
+ }
+ .cards h4, .cards h5 
+ {
+    font-size: 1.2rem;
+ }
+ .cards p 
+ {
+    font-size: 1.2rem;
+    line-height: 25px;
+ }
+ .attribution 
+ {
+    margin:40px;
+    position: static;
+    font-size: 1rem; 
+ }
+}
